# CryScript

./: Cargo.toml  README.md  aaaa.cry  grammar.txt  script.cry
builds/macos/: cry_script
crates/cry_script/: Cargo.toml
crates/cry_script/src/: exceptions.rs  interpreter.rs  lexer.rs  lib.rs  parser.rs  variables.rs
crates/cry_script/src/exceptions/: built_in_function_exceptions.rs  interpreter_exceptions.rs  lexer_exceptions.rs  parser_exceptions.rs
crates/cry_script/src/interpreter/: built_in_functions.rs  context.rs  function.rs  instructions.rs  type_hint.rs
crates/cry_script/src/interpreter/instructions/: binary_op.rs  unary_op.rs
crates/cry_script/src/lexer/: token.rs
crates/cry_script/src/parser/: data.rs
crates/utils/src/: lib.rs
examples/: functions.cry  guessing_game.cry  simple_recursion.cry
src/: environment.rs  exceptions.rs  lexer.rs  main.rs  parser.rs  tests.rs  utils.rs
src/exceptions/: interpreter_errors.rs  lexer_errors.rs  parser_errors.rs
src/lexer/: tokens.rs
src/parser/: built_in_functions.rs  context.rs  functions.rs  instructions.rs
src/parser/instructions/: binary_operation.rs  unary_operator.rs
src/std_lib/: mod.rs  std.cry  std_math.cry  std_rand.cry
std_lib/: std.cry  std_file.cry  std_math.cry  std_rand.cry
